--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <p>3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
 
-<ol>
- <li><h3>How to Find</h3></li>
+<h3>How to Find</h3>
 <ul>
  <li>First you need to find a reliable and affordable 3D printer. I like the website Creality 3D and the Ender 3 Pro is a good deal.</li>
  <li>Link here:</li>
  <a href="https://www.creality3dofficial.com/products/official-creality-ender-3-3d-printer">Creality 3D</a>
  </ul>
-</ol>
