--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <li>After you assemble the 3D printer choose an STL file from any resource you want. A good website is Thingiverse:</li>
 <a href="https://www.thingiverse.com/search?type=things&q=&sort=popular&posted_after=now-30d">Thingiverse</a>
 <li>You will then have to transfer the STL file to a software that will be able to connect to your 3D printer. I like the software Cura by Ultimaker:</p>
-<a href="https://ultimaker.com/software/ultimaker-cura">Printing Software</li>
+<a href="https://ultimaker.com/software/ultimaker-cura">Printing Software</a>
 <li>Upon dragging the STL file to Cura you will be able to resize and scale the 3D print.</li>
  </ul>
   
