--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="utf-8">
+  <!-- mobile friendly -->
+  <meta name="viewport" content="width=device-width, initial scale=1">
+  <title>Hello World</title>
+</head>
+<body>
+
+</body>
+ 
 <h1>How to Use a 3D Printer</h1>
 <h2>Ender 3 Pro</h2>
 
@@ -24,7 +36,11 @@
   
 <h3><li>How to Print</li></h3>
 <ul>
- <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. <strong>Save</strong> the file to the USB and <strong>push</strong> the card into the 3D printer. <strong>Turn on</strong> the 3D printer, <strong>click</strong> on "print from TF", and <strong>select</strong> your file.</li>
+ <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
+ <li><strong>Save</strong> the file to the USB.</li>
+ <li><strong>push</strong> the card into the 3D printer.</li>
+ <li><strong>Turn on</strong> the 3D printer</li>
+ <li><strong>click</strong> on "print from TF" and <strong>select</strong> your file.</li>
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
 </ol>
