--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
  <li><strong>Save</strong> the file to the USB.</li>
- <li><strong>push</strong> the card into the 3D printer.</li>
+ <li><strong>Push</strong> the card into the 3D printer.</li>
  <li><strong>Turn on</strong> the 3D printer</li>
- <li><strong>click</strong> on "print from TF" and <strong>select</strong> your file.</li>
+ <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
 </ol>
