--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <!-- mobile friendly -->
   <meta name="viewport" content="width=device-width, initial scale=1">
-  <title>Hello World</title>
+  <link rel="stylesheet" href="css/main.css">
+  <title>Shelties</title>
 </head>
 <body>
-
-</body>
  
 <h1>How to Use a 3D Printer</h1>
 <h2>Ender 3 Pro</h2>
