--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- mobile friendly -->
   <meta name="viewport" content="width=device-width, initial scale=1">
   <link rel="stylesheet" href="css/main.css">
-  <title>Shelties</title>
+  <title>How to 3D Print</title>
 </head>
 <body>
  
