--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     <h3><li>How to Print</li></h3>
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
- <img alt="Plug" src="Plug.HEIC">
+ <img alt="Plug" src="Plug.jpeg">
  <li><strong>Save</strong> the file to the USB.</li>
   <img alt="Save" src="Save.png">
  <li><strong>Push</strong> the card into the 3D printer.</li>
-  <img alt="Push" src="Push.HEIC">
+  <img alt="Push" src="Push.jpeg">
  <li><strong>Turn on</strong> the 3D printer</li>
-  <img alt="Turn on" src="Turn on.HEIC">
+  <img alt="Turn on" src="Turn on.jpeg">
  <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
-  <img alt="Print" src="Print.HEIC">
+  <img alt="Print" src="Print.jpeg">
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
      </ol>
