--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 <p>3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
 
+<nav>
+  <h2>Jump to:</h2>
+  <ul>
+    <li><a href="#How to Find">How to Find</a><li>
+    <li><a href="#How to Use">How to Use</a><li>
+    <li><a href="#How to Print">How to Print</a><li>
+  </ul>
+  </nav>
+
+<section class="list" id="How to Find">
     <ol>
     <h3><li>How to Find</li></h3>
 <ul>
@@ -23,7 +33,9 @@
  <li>Link here:</li>
  <a href="https://www.creality3dofficial.com/products/official-creality-ender-3-3d-printer">Creality 3D</a>
  </ul>
+ </section>
 
+ <section class="list" id="How to Use">
     <h3><li>How to Use</li></h3>
  <ul>
   <li>You will get the printer in <em>parts</em> so watch this video:</li>
@@ -40,7 +52,9 @@
 <a href="https://ultimaker.com/software/ultimaker-cura">Printing Software</a>
 <li>Upon dragging the STL file to Cura you will be able to resize and scale the 3D print.</li>
  </ul>
-  
+</section>
+      
+<section class="list" id="How to Print">
     <h3><li>How to Print</li></h3>
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
@@ -57,3 +71,4 @@
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
      </ol>
+</section>
