--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <nav>
   <h2>Jump to:</h2>
   <ul>
-    <li><a href="#How to Find">How to Find</a><li>
-    <li><a href="#How to Use">How to Use</a><li>
-    <li><a href="#How to Print">How to Print</a><li>
+    <li><a href="#How to Find">How to Find</a></li>
+    <li><a href="#How to Use">How to Use</a></li>
+    <li><a href="#How to Print">How to Print</a></li>
   </ul>
   </nav>
 
