--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <h1>How to Use a 3D Printer</h1>
 <h2>Ender 3 Pro</h2>
 
-<p>3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
-
+<p class="tagline">3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
+  <p class="byline">By<em>Grace Collins</em></p>
+  
 <nav>
   <h3>Jump to:</h3>
   <ul>
