--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>Ender 3 Pro</h2>
 
 <p class="tagline">3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
-  <p class="byline">By<em>Grace Collins</em></p>
+  <p class="byline">By Grace Collins</p>
   
 <nav>
   <h3>Jump to:</h3>
