--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
  <li>First you need to find a <em>reliable</em> and <em>affordable</em> 3D printer. I like the website Creality 3D and the Ender 3 Pro is a good deal.</li>
  <img alt="Creality 3D" src="Creality 3D.png">
 <br>
+  <object width="425" height="350">
+  <param name="movie" value="https://youtu.be/me8Qrwh907Q" />
+  <param name="wmode" value="transparent" />
+  <embed src="https://youtu.be/me8Qrwh907Q"
+         type="application/x-shockwave-flash"
+         wmode="transparent" width="425" height="350" />
+</object>
  <li>Link here:</li>
  <a href="https://www.creality3dofficial.com/products/official-creality-ender-3-3d-printer">Creality 3D</a>
  </ul>
