--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
  <br>
+ <section class="steps" id="steps">
  <img alt="Plug" src="Plug.jpeg">
  <li><strong>Save</strong> the file to the USB.</li>
   <img alt="Save" src="Save.png">
@@ -72,5 +73,6 @@
   <img alt="Print" src="Print.jpeg">
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
+ <section class="steps" id="steps">
 </section>
 </ol>
