--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
   <img alt="Print" src="Print.jpeg">
 <li>Now the plate will start heating up and your print will be on its way!</li>
 </ul>
- <section class="steps" id="steps">
+ </section class="steps" id="steps">
 </section>
 </ol>
