--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
  <br>
+ <section class="img" id="img">
  <img alt="Plug" src="Plug.jpeg">
  <li><strong>Save</strong> the file to the USB.</li>
   <img alt="Save" src="Save.png">
@@ -72,7 +73,8 @@
  <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
   <img alt="Print" src="Print.jpeg">
 <li>Now the plate will start heating up and your print will be on its way!</li>
-</ul>
+   </ul>
+   </section class="img" id="img">
  </section class="steps" id="steps">
 </section>
 </ol>
