--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       
 <section class="list" id="How to Print">
     <h3><li>How to Print</li></h3>
- <section class="steps" id="steps">
-   
+  
+ <li class="steps">
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer. 
  <br>
@@ -74,8 +74,7 @@
   <img alt="Print" src="Print.jpeg">
 <li>Now the plate will start heating up and your print will be on its way!</li>
    </ul>
- </section class="steps" id="steps">
-  
+ </li>
 </section>
 </ol>
 
