--- a/index.html
+++ b/index.html
@@ -13,22 +13,40 @@
 <h1>How to Use a 3D Printer</h1>
 <h2>Ender 3 Pro</h2>
 
+<section class="list" id="tagline">
+  <!-- Before-->
 <p class="tagline">3D printing is a new way to create <strong>innovative</strong> and <strong>creative</strong> products right in your own home.</p>
+<!-- After-->
+</section>
+  
   <p class="byline">By Grace Collins</p>
   
+   <section class="list" id="key-takeaways">    
+  <h4>3d Printing Tools</h4>
+  
+  <ul>
+  <li>3d printer</li>
+  <li>computer</li>
+  <li>USB</li>
+  <li>SD card</li>
+  </ul>
+</section
+     
 <nav>
   <h3>Jump to:</h3>
   <ul>
-    <li><a href="#How to Find">How to Find</a></li>
-    <li><a href="#How to Use">How to Use</a></li>
-    <li><a href="#How to Print">How to Print</a></li>
+    <li><a href="#how-to-find">How to Find</a></li>
+    <li><a href="#how-to-use">How to Use</a></li>
+    <li><a href="#how-to-print">How to Print</a></li>
   </ul>
   </nav>
+  
 
-<ol>
-  <li>
-<section class="list" id="How to Find">
+<section class="list" id="how-to-find">
+  <!-- Before-->
     <h3>How to Find</h3>
+   <!-- After-->
+ </section>
     <ul>
       <li>First you need to find a <em>reliable</em> and <em>affordable</em> 3D printer. I like the website Creality 3D and the Ender 3 Pro is a good deal.
         <figure>
@@ -37,11 +55,12 @@
         </figure>
       </li>
    </ul>
- </section>
-    
-<li>
- <section class="list" id="How to Use">
+ 
+ <section class="list" id="how-to-use">
+ <!-- Before-->
     <h3>How to Use</h3>
+ <!-- After-->
+  </section>
     <ul>
       <li>You will get the printer in <em>parts</em> so watch this video:
         <figure>
@@ -55,6 +74,7 @@
 <figcaption><a href="https://www.thingiverse.com/search?type=things&q=&sort=popular&posted_after=now-30d">Thingiverse</a></figcaption>
         </figure>
       </li>
+  <li>Once you find a file that you are happy with download it. A zip file should then appear and double click it to access the STL.</li>
   <li>You will then have to <em>transfer</em> the STL file to a software that will be able to connect to your 3D printer. I like the software Cura by Ultimaker:
         <figure>
     <img alt="Cura" src="Cura.png">
@@ -65,28 +85,34 @@
      </ul>
 </section>
   
-<li>
-<section class="list" id="How to Print">
+<section class="list" id="how-to-print">
+<!-- Before-->
     <h3>How to Print</h3>
+<!-- After-->
+  </section>
 <ul>
  <li><strong>Plug</strong> the USB with file card that came with the printer into your computer.</li>
  <img alt="Plug" src="Plug.jpeg">
+  
  <li><strong>Save</strong> the file to the USB.</li>
   <img alt="Save" src="Save.png">
+  
  <li><strong>Push</strong> the card into the 3D printer.</li>
   <img alt="Push" src="Push.jpeg">
+  
  <li><strong>Turn on</strong> the 3D printer</li>
   <img alt="Turn on" src="Turn on.jpeg">
+  
  <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
   <img alt="Print" src="Print.jpeg">
+  <br>
 <li>Now the plate will start heating up and your print will be on its way!</li>
    </ul>
-</section>
-  
-</ol>
+
+  </li>
+
 
 <a href="https://www.3dhubs.com/guides/3d-printing/">Inspiration</a>
-  
   
   
   
