--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 </section>
   
   <p class="byline">By Grace Collins</p>
-  
-   <section class="list" id="key-takeaways">    
-  <h4>3d Printing Tools</h4>
-  
-  <ul>
+ 
+<section class="list" id="key-takeaways"> 
+ <details>
+ <summary>3d Printing Tools</summary>
+ <ul>
   <li>3d printer</li>
   <li>computer</li>
   <li>USB</li>
   <li>SD card</li>
   </ul>
+ </details>
 </section
      
 <nav>
