--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
  
 <section class="list" id="key-takeaways"> 
  <details>
- <summary>3d Printing Tools</summary>
+ <summary>3D Printing Tools</summary>
  <ul>
-  <li>3d printer</li>
+  <li>3D printer</li>
   <li>computer</li>
   <li>USB</li>
   <li>SD card</li>
