--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <h3>How to Use</h3>
  <!-- After-->
   </section>
+  
     <ul>
       <li>You will get the printer in <em>parts</em> so watch this video:
         <figure>
@@ -80,11 +81,10 @@
         <figure>
     <img alt="Cura" src="Cura.png">
 <figcaption><a href="https://ultimaker.com/software/ultimaker-cura">Printing Software</a></figcaption>
-        </figure
+    </figure>
       </li>
 <li>Upon dragging the STL file to Cura you will be able to resize and scale the 3D print.</li>
      </ul>
-</section>
   
 <section class="list" id="how-to-print">
 <!-- Before-->
@@ -106,11 +106,10 @@
   
  <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
   <img alt="Print" src="Print.jpeg">
-  <br>
+  
 <li>Now the plate will start heating up and your print will be on its way!</li>
    </ul>
 
-  </li>
 
 
 <a href="https://www.3dhubs.com/guides/3d-printing/">Inspiration</a>
