--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <ul>
       <li>First you need to find a <em>reliable</em> and <em>affordable</em> 3D printer. I like the website Creality 3D and the Ender 3 Pro is a good deal.
         <figure>
-      <img alt="Creality 3D" src="creality-3D.png">
+      <img alt="creality-3D" src="Creality 3D.png">
    <figcaption>Link here: <a href="https://www.creality3dofficial.com/products/official-creality-ender-3-3d-printer">Creality 3D</a></figcaption>
         </figure>
       </li>
@@ -72,7 +72,7 @@
       </li>
       <li>After you assemble the 3D printer choose an STL file from any resource you want. A good website is Thingiverse:
         <figure>
-    <img alt="Baby Yoda" src="baby-yoda-thingiverse.png">
+    <img alt="baby-yoda" src="Baby Yoda Thingiverse.png">
 <figcaption><a href="https://www.thingiverse.com/search?type=things&q=&sort=popular&posted_after=now-30d">Thingiverse</a></figcaption>
         </figure>
       </li>
