--- a/index.html
+++ b/index.html
@@ -92,20 +92,27 @@
 <!-- After-->
   </section>
 <ul>
- <li><strong>Plug</strong> the USB with file card that came with the printer into your computer.</li>
- <img alt="Plug" src="Plug.jpeg">
+ <li>
+   <figure>
+     <figcaption><strong>Plug</strong> the USB with file card that came with the printer into your computer. </figcaption>
+     <img alt="Plug" src="Plug.jpeg">
+   </figure>
+ </li>
   
- <li><strong>Save</strong> the file to the USB.</li>
-  <img alt="Save" src="Save.png">
+ <li>
+   <figure>
+     <figcaption><strong>Save</strong> the file to the USB.</figcaption>
+     <img alt="Save" src="Save.png"></li>
+  </figure>
+ </li>
   
- <li><strong>Push</strong> the card into the 3D printer.</li>
-  <img alt="Push" src="Push.jpeg">
+ <li>
+   <figure>
+      <figcaption<strong>Push</strong> the card into the 3D printer. <img alt="Push" src="Push.jpeg"></li>
   
- <li><strong>Turn on</strong> the 3D printer</li>
-  <img alt="Turn on" src="Turn on.jpeg">
+ <li><strong>Turn on</strong> the 3D printer. <img alt="Turn on" src="Turn on.jpeg"></li>
   
- <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</li>
-  <img alt="Print" src="Print.jpeg">
+ <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file. <img alt="Print" src="Print.jpeg"></li>
   
 <li>Now the plate will start heating up and your print will be on its way!</li>
    </ul>
