--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
   
  <li>
    <figure>
-      <figcaption<strong>Push</strong> the card into the 3D printer. <img alt="Push" src="Push.jpeg"></li>
+      <figcaption><strong>Push</strong> the card into the 3D printer.</figcaption> 
+      <img alt="Push" src="Push.jpeg"></li>
+  </figure>
+</li>
   
  <li><strong>Turn on</strong> the 3D printer. <img alt="Turn on" src="Turn on.jpeg"></li>
   
