--- a/index.html
+++ b/index.html
@@ -102,25 +102,34 @@
  <li>
    <figure>
      <figcaption><strong>Save</strong> the file to the USB.</figcaption>
-     <img alt="Save" src="Save.png"></li>
+     <img alt="Save" src="Save.png">
   </figure>
  </li>
   
  <li>
    <figure>
       <figcaption><strong>Push</strong> the card into the 3D printer.</figcaption> 
-      <img alt="Push" src="Push.jpeg"></li>
+      <img alt="Push" src="Push.jpeg">
   </figure>
 </li>
   
- <li><strong>Turn on</strong> the 3D printer. <img alt="Turn on" src="Turn on.jpeg"></li>
+ <li>
+   <figure>
+     <figcaption><strong>Turn on</strong> the 3D printer.</figcaption> 
+     <img alt="Turn on" src="Turn on.jpeg">
+   </figure>
+ </li>
   
- <li><strong>Click</strong> on "print from TF" and <strong>select</strong> your file. <img alt="Print" src="Print.jpeg"></li>
+ <li>
+   <figure>
+     <figcaption><strong>Click</strong> on "print from TF" and <strong>select</strong> your file.</figcaption> 
+     <img alt="Print" src="Print.jpeg">
+   </figure>
+ </li>
   
 <li>Now the plate will start heating up and your print will be on its way!</li>
+  
    </ul>
-
-
 
 <a href="https://www.3dhubs.com/guides/3d-printing/">Inspiration</a>
   
